refactor: centralize widget helpers