@@ -1,5 +1,6 @@
 package com.github.lutzluca.btrbz.core.widgets.ui;
 
+import com.github.lutzluca.btrbz.core.widgets.WidgetMath;
 import com.mojang.blaze3d.pipeline.RenderPipeline;
 import com.mojang.blaze3d.vertex.VertexConsumer;
 import io.wispforest.owo.ui.core.OwoUIPipelines;
@@ -86,7 +87,7 @@ final class RoundedRectangleElementRenderState implements GuiElementRenderState 
         int radius,
         int cornerSegments
     ) {
-        int safeRadius = Math.max(0, Math.min(radius, Math.min(width, height) / 2));
+        int safeRadius = WidgetMath.clamp(radius, 0, Math.max(0, Math.min(width, height) / 2));
         int safeSegments = Math.max(1, cornerSegments);
         float[] points = new float[(5 + safeSegments * 4) * 2];
         int offset = 0;
