@@ -1,5 +1,6 @@
 package com.github.lutzluca.btrbz.core.widgets.ui;
 
+import com.github.lutzluca.btrbz.core.widgets.WidgetMath;
 import io.wispforest.owo.ui.core.Surface;
 import org.joml.Matrix3x2f;
 
@@ -27,7 +28,7 @@ public final class WidgetSurfaces {
         int color,
         int radius
     ) {
-        int resolvedRadius = Math.max(0, Math.min(radius, Math.min(width, height) / 2));
+        int resolvedRadius = WidgetMath.clamp(radius, 0, Math.max(0, Math.min(width, height) / 2));
 
         if (resolvedRadius == 0) {
             context.fill(x, y, x + width, y + height, color);
